# ai-blocks

./: .gitignore  README.md  conversation_20250901_141311.json  conversation_20250901_141412.json  conversation_20250901_142103.json  pyproject.toml
.cursor/rules/: context.mdc
ai_modular_blocks/: README.md  __init__.py  minimal.py
ai_modular_blocks/core/: README.md  __init__.py  base.py  config_manager.py  exceptions.py  validators.py
ai_modular_blocks/core/base/: README.md  __init__.py  llm.py  provider.py  storage.py  utilities.py
ai_modular_blocks/core/interfaces/: README.md  __init__.py  llm.py  mcp.py  minimal.py  storage.py  tools.py  utilities.py
ai_modular_blocks/core/types/: README.md  __init__.py  basic.py  config.py  mcp.py  tools.py
ai_modular_blocks/processors/: README.md
ai_modular_blocks/providers/: README.md  __init__.py
ai_modular_blocks/providers/embeddings/: README.md
ai_modular_blocks/providers/llm/: README.md  __init__.py  anthropic_provider.py  deepseek_provider.py  factory.py  openai_provider.py
ai_modular_blocks/providers/tools/: README.md  __init__.py
ai_modular_blocks/providers/vectorstores/: README.md  __init__.py  chroma_store.py  factory.py  pinecone_store.py
ai_modular_blocks/tests/: README.md
ai_modular_blocks/tools/: __init__.py  calculator.py  file_ops.py  web_client.py
ai_modular_blocks/utils/: README.md
ai_modular_blocks/utils/caching/: README.md
ai_modular_blocks/utils/logging/: README.md
ai_modular_blocks/utils/monitoring/: README.md
docs/: README.md  TODO.md
examples/: 001_deepseek_simple_chat.py  README.md  run_all.sh
examples/000_quickstart/: README.md  simple_usage.py  user_freedom.py
examples/001_basic_llm_call/: README.md  main.py
examples/002_multi_provider_comparison/: main.py
examples/003_streaming_response/: main.py
examples/004_chat_with_history/: conversation_20250907_214740.json  conversation_20250907_214854.json  main.py
examples/005_prompt_templates/: main.py
examples/006_basic_function_calling/: main.py
examples/007_calculator_tools/: main.py
examples/008_web_search_tools/: README.md  main.py
examples/009_file_operations_tools/: README.md  main.py
examples/010_multi_tool_orchestration/: README.md  main.py
examples/011_simple_react_agent/: README.md  main.py
examples/012_agent_with_memory/: README.md  main.py
examples/013_planning_agent/: README.md  main.py
examples/014_self_improving_agent/: README.md  main.py
examples/015_multi_modal_agent/: README.md  main.py
examples/016_multi_agent_collaboration/: README.md  main.py
examples/01_basic_usage/: config_example.py  provider_comparison.py  simple_chat.py
examples/020_complete_application/: README.md  main.py
examples/02_rag_system/: simple_rag.py
